--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cara - A Modern ECommerce Website</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 </head>
 <body>
     
+    <section id="header">
+        <a href="#"><img src="img/logo.png" alt="logo"></a>
+        <ul id="navbar">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="Blog.html">blog</a></li>
+            <li><a href="About.html">about</a></li>
+            <li><a href="Contact.html">contacs</a></li>
+            <li><a href="cart.html"><i class="fas fa-shopping-bag"></i></a></li>
+        </ul>
+    </section>
 
+    <section id="hero">
+        <h4>Trade-in-offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all products</h1>
+        <p>Save more with coupons & up to 70% off!</p>
+        <button>Show Now</button>
+    </section>
 
     <script src="./assets/js/main.js"></script>
 </body>
-</html>
+</html> 
