--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     
+    <!-- HEADER SECTION -->
     <section id="header">
         <a href="#"><img src="img/logo.png" alt="logo"></a>
         <ul id="navbar">
@@ -22,6 +23,7 @@
         </ul>
     </section>
 
+    <!-- HERO SECTION -->
     <section id="hero">
         <h4>Trade-in-offer</h4>
         <h2>Super value deals</h2>
@@ -29,6 +31,46 @@
         <p>Save more with coupons & up to 70% off!</p>
         <button>Show Now</button>
     </section>
+
+    <!-- FEATURE SECTION -->
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+        <div class="fe-box">
+            <img src="img/features/f1.png" alt="feature-img1">
+            <h6>Free Shipping</h6>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="./assets/js/main.js"></script>
 </body>
