new codes added to html and css files

--- a/index.html
+++ b/index.html
@@ -339,7 +339,21 @@
         </div>
     </section>
 
-
+    <!-- SMALL BANNER SECTION -->
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box">
+            <h4>crazy deals</h4>
+            <h2>buy 1 get 1 free</h2>
+            <span>The best classic dress is on sale ar cara</span>
+            <button>Learn More</button>
+        </div>
+        <div class="banner-box">
+            <h4>crazy deals</h4>
+            <h2>buy 1 get 1 free</h2>
+            <span>The best classic dress is on sale ar cara</span>
+            <button>Learn More</button>
+        </div>
+    </section>
 
 
 
